Adding Logo and giving styles to navbar

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <nav>
             <div class="logo">
-                Logo
+                <img id="logo" src="grafics/LogoMB.svg" alt="web logo">
             </div>
             <ul class="item-menu">
-                <li>index 1</li>
-                <li>index 2</li>
-                <li>index 3</li>
-                <li>index 4</li>
-                <li>index 5</li>
+                <li>Index 1</li>
+                <li>Index 2</li>
+                <li>Index 3</li>
+                <li>Index 4</li>
+                <li>Index 5</li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,6 @@
 
         </section>
         <section>
-
         </section>
         <section>
             
