adding a link to home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset-styles.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Document</title>
+    <title>coding practice</title>
 </head>
 <body>
     <header>
@@ -14,11 +14,11 @@
                 <img id="logo" src="grafics/LogoMB.svg" alt="web logo">
             </div>
             <ul class="item-menu">
-                <li>Index 1</li>
+                <li><a href="index.html">Index 1</a></li>
                 <li>Index 2</li>
                 <li>Index 3</li>
                 <li>Index 4</li>
-                <li>Index 5</li>
+                <li>Igndex 5</li>
             </ul>
         </nav>
     </header>
