Adding JS files,styles and some html from snake game

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     </header>
     <main>
         <section>
-
+            <div class="header"><h2>Snake</h2></div>
+            <div id="board"></div>
+            <div class="board-info">
+                <h3>Socore:</h3>
+                <div id="scoreBoard"></div>
+                <button id="start">Start</button>
+            </div>
+            <div id="gameOver">Game Over</div>
         </section>
         <section>
         </section>
@@ -32,6 +39,6 @@
             
         </section>
     </main>
-    
+    <script src="script/script.js"></script>
 </body>
 </html>
